--- a/Kah.html
+++ b/Kah.html
@@ -448,43 +448,43 @@
   <div class="carousel" onmousedown="startDrag(event)" onmousemove="dragCarousel(event)" onmouseup="endDrag(event)" onmouseleave="endDrag(event)">
     <div class="carousel-inner" id="carousel-inner">
       <div class="carousel-item" onmousedown="zoomIn(event)" onmouseup="zoomOut(event)">
-        <img src="image1.jpg" alt="Réalisation 1">
+        <img src="B00929EF-66E6-481D-BD5E-2B49C77D27DF.png" alt="Réalisation 1">
         <div class="description">Réalisation 1 - Design graphique</div>
       </div>
       <div class="carousel-item" onmousedown="zoomIn(event)" onmouseup="zoomOut(event)">
-        <video src="video1.mp4" controls></video>
+        <video src="background-video.mp4" controls></video>
         <div class="description">Vidéo 1 - Publicité visuelle</div>
       </div>
       <div class="carousel-item" onmousedown="zoomIn(event)" onmouseup="zoomOut(event)">
-        <img src="image2.jpg" alt="Réalisation 2">
+        <img src="B00929EF-66E6-481D-BD5E-2B49C77D27DF.png" alt="Réalisation 2">
         <div class="description">Réalisation 2 - Illustration</div>
       </div>
       <div class="carousel-item" onmousedown="zoomIn(event)" onmouseup="zoomOut(event)">
-        <img src="image3.jpg" alt="Réalisation 3">
+        <img src="B00929EF-66E6-481D-BD5E-2B49C77D27DF.png" alt="Réalisation 3">
         <div class="description">Réalisation 3 - Affiche publicitaire</div>
       </div>
       <div class="carousel-item" onmousedown="zoomIn(event)" onmouseup="zoomOut(event)">
-        <video src="video2.mp4" controls></video>
+        <video src="background-video.mp4" controls></video>
         <div class="description">Vidéo 2 - Vidéo d'animation</div>
       </div>
       <div class="carousel-item" onmousedown="zoomIn(event)" onmouseup="zoomOut(event)">
-        <img src="image4.jpg" alt="Réalisation 4">
+        <img src="B00929EF-66E6-481D-BD5E-2B49C77D27DF.png" alt="Réalisation 4">
         <div class="description">Réalisation 4 - Branding</div>
       </div>
       <div class="carousel-item" onmousedown="zoomIn(event)" onmouseup="zoomOut(event)">
-        <img src="image5.jpg" alt="Réalisation 5">
+        <img src="B00929EF-66E6-481D-BD5E-2B49C77D27DF.png" alt="Réalisation 5">
         <div class="description">Réalisation 5 - Logo design</div>
       </div>
       <div class="carousel-item" onmousedown="zoomIn(event)" onmouseup="zoomOut(event)">
-        <video src="video3.mp4" controls></video>
+        <video src="background-video.mp4" controls></video>
         <div class="description">Vidéo 3 - Montage vidéo</div>
       </div>
       <div class="carousel-item" onmousedown="zoomIn(event)" onmouseup="zoomOut(event)">
-        <img src="image6.jpg" alt="Réalisation 6">
+        <img src="B00929EF-66E6-481D-BD5E-2B49C77D27DF.png" alt="Réalisation 6">
         <div class="description">Réalisation 6 - Illustration numérique</div>
       </div>
       <div class="carousel-item" onmousedown="zoomIn(event)" onmouseup="zoomOut(event)">
-        <img src="image7.jpg" alt="Réalisation 7">
+        <img src="B00929EF-66E6-481D-BD5E-2B49C77D27DF.png" alt="Réalisation 7">
         <div class="description">Réalisation 7 - Packaging produit</div>
       </div>
     </div>
