--- a/Kah.html
+++ b/Kah.html
@@ -251,7 +251,7 @@
 </style>
 
 <section id="a-propos" class="about-section">
-  <h2 class="about-title">À propos de KahPeripherique</h2>
+  <h2 class="about-title">Qui sommes-nous</h2>
   
   <div class="about-container">
     <div class="about-image">
@@ -284,7 +284,7 @@
   }
 
   .about-title {
-    font-size: 2.8em;
+    font-size: 2.2em; /* Taille réduite */
     color: #1C2341;
     margin-bottom: 40px;
     font-family: 'Poppins', sans-serif;
@@ -292,17 +292,20 @@
 
   .about-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     gap: 40px;
     margin-bottom: 40px;
+    max-width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    flex-wrap: wrap;
   }
 
   .about-image img {
     width: 100%;
     max-width: 500px;
     border-radius: 10px;
-    border: 15px solid #F4C04D;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
   }
 
@@ -320,22 +323,20 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    padding: 12px 24px;
+    padding: 8px 24px; /* hauteur réduite */
     font-size: 18px;
     color: white;
-    background-color: #25D366;
+    background-color: #F4C04D;
     text-decoration: none;
     border-radius: 25px;
     transition: background-color 0.3s;
-    width: 80%;
-    height: 50px;
+    width: 70%;
     font-weight: 600;
-    margin: 0 auto;
     margin-top: 30px;
   }
 
   .cta-button:hover {
-    background-color: #1ebc59;
+    background-color: #e0aa3c;
   }
 
   .cta-button i {
@@ -347,6 +348,7 @@
     .about-container {
       flex-direction: column;
       text-align: center;
+      max-width: 90%;
     }
 
     .about-image {
@@ -360,9 +362,13 @@
 
     .cta-button {
       font-size: 16px;
+      width: 90%;
     }
   }
 </style>
+
+<!-- Font Awesome (à mettre dans le <head>) -->
+<script src="https://kit.fontawesome.com/ton_code_ici.js" crossorigin="anonymous"></script>
 
 <!-- Font Awesome (à mettre dans le <head>) -->
 <script src="https://kit.fontawesome.com/ton_code_ici.js" crossorigin="anonymous"></script>
